Fixed wrap of li

--- a/packages/core/stories/styles/index.scss
+++ b/packages/core/stories/styles/index.scss
@@ -162,6 +162,7 @@ p.lang-label {
 	ul {
 		padding: 0;
 		margin-bottom: 3rem;
+		width: 100%;
 	}
 	li {
 		list-style: none;
